--- a/views/products.ejs
+++ b/views/products.ejs
@@ -34,7 +34,7 @@
         <td><%= currentElement['Store ID'] %></td>
         <td><%= currentElement['Location'] %></td>
         <td><%= currentElement['Price'] %></td>
-        <!-- Create a link to the 'Update' page for each store -->
+        <!-- Create a link to the 'Delete' each product -->
         <td><a href='/stores/edit/<%= currentElement.sid %>'>Delete <%= currentElement['Description'] %></a></td>
       </tr>
     <% }) %>
