--- a/views/managers.ejs
+++ b/views/managers.ejs
@@ -43,6 +43,8 @@
       <td>
         <%= currentElement.salary %>
       </td>
+       <!-- Create a link to the 'Delete' each product -->
+    <td><a href='/managers/delete/<%= currentElement._id %>'>Delete <%= currentElement['Description'] %></a></td>
     </tr>
     <% }) %>
 
