Creating restrictions when adding new manager

--- a/views/addManager.ejs
+++ b/views/addManager.ejs
@@ -39,8 +39,8 @@
     <table>
       <tr>
         <td>
-          <label for="managerID">Manager ID:</label>
-          <input type="text" id="managerID" name="managerID" pattern=".{4}" title="Exactly 4 characters required" required>
+          <label for="_id">Manager ID:</label>
+          <input type="text" id="_id" name="_id" pattern=".{4}" title="Exactly 4 characters required" required>
         </td>
       </tr>
       <tr>
