--- a/views/deleteError.ejs
+++ b/views/deleteError.ejs
@@ -1,7 +1,7 @@
-<div class="error-container">
+<div>
     <h1>Error Message</h1>
     <p>
-        <%= productName %> is currently in stores and cannot be deleted
+        <%= pid %> is currently in stores and cannot be deleted
     </p>
     <a href="/">Home</a>
 </div>
