--- a/views/stores.ejs
+++ b/views/stores.ejs
@@ -3,15 +3,16 @@
 <!-- styling.ejs -->
 <style>
     table {
-      width: 80%; /* Adjust the width as needed */
-      margin: auto; /* Center-align the table */
+      width: 80%; 
+      margin: auto; 
       border-collapse: collapse;
     }
   
-    th, td {
-      padding: 10px; /* Add padding to create a gap between columns */
-      text-align: center; /* Center-align content within cells */
-      border: 1px solid #ddd; /* Add border for better visibility */
+    th, 
+    td {
+      padding: 10px; 
+      text-align: center; 
+      border: 1px solid #ddd; 
     }
   </style>
   
